# openshell-image-builder

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md
.agents/skills/: README.md
.agents/skills/add-agent/: SKILL.md
.agents/skills/add-base-image/: SKILL.md
.agents/skills/add-cli-flag/: SKILL.md
.agents/skills/add-inference/: SKILL.md
.agents/skills/add-skill/: SKILL.md
.agents/skills/check/: SKILL.md
.agents/skills/coderabbit-review/: SKILL.md
.agents/skills/debug-image/: SKILL.md
.agents/skills/integration-tests/: SKILL.md
.agents/skills/sandbox-policy/: SKILL.md
.agents/skills/update-github-action/: SKILL.md
.agents/skills/work-on-issue/: SKILL.md
.github/: dependabot.yml
.github/workflows/: daily-repo-status.lock.yml  daily-repo-status.md  integration.yml  pr-check.yml  release.yml
.kaiden/: workspace.json
.kaiden/features/cargo-llvm-cov/: devcontainer-feature.json  install.sh
crates/container-image-builder/: Cargo.toml
crates/container-image-builder/src/: lib.rs
src/: build.rs  certs.rs  config.rs  containerfile.rs  host.rs  main.rs  workspace.rs
src/agent/: claude.rs  mod.rs  opencode.rs
src/agent/opencode/: anthropic.rs  mod.rs  ollama.rs  openai.rs  vertexai.rs
src/feature/: local.rs  metadata.rs  mod.rs  oci.rs
src/inference/: anthropic.rs  mod.rs  ollama.rs  openai.rs  vertexai.rs
src/policy/: mod.rs
tests/: integration_test.rs
tests/fixtures/: test-ca.crt
