# Copyright (C) 2026 Red Hat, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "openshell-image-builder"
version = "0.6.0-next"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
env_logger = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
toml = "0.8"

[dev-dependencies]
